--- a/404.html
+++ b/404.html
@@ -25,15 +25,15 @@
 						<div class="content">
 							<div class="inner">
 								<h1>404 PAGE NOT FOUND</h1>
-								<p>Soon to be full stack web developer, hobbiest game dev, and your new best friend.</p>
+								<p>The resource you are looking for does not exist.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="https://ianmagenta.github.io">Come Back to Reality</a></li>
+								<!-- <li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -44,71 +44,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hi there! I'm Ian. I'm a (soon-to-be) Full Stack Web Developer and the designer of your future website. It's too late, you've already made up your mind. Now that you've chosen me, I would suggest taking some time to check out my <a href="#work">previous work</a>.</p>
-								<p>I'm so glad you love it! (I do too). If you're interested in seeing more of my work, why not check out my <a href="https://github.com/ianmagenta">Github</a> page!</p>
-								<p>I also do game development on the side! Feel free to <a href="#contact">give me a shout</a> if you ever want to talk shop!</p>
-							</article>
-
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Project 1</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-
-								<h2 class="major">Project 2</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat
-									volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus
-									ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
-									pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-									pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris
-									aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Believe it or not, I actually got my start in politics! I graduated with a BA in Political Theory and Constitutional
-								Democracy (PTCD) as well as Social Relations and Policy (SRP) back in 2014. From there, I worked at a number of
-								government-related jobs and internships across the country. I eventually landed in Washington, DC where I ended up
-								working for a number of education-based non-profits. Over my years there, my passion for education grew and I ended up
-								moving to Chicago, IL to pursue a career in higher ed. It was there that my love for programming started (and grew).
-								Maybe it was because I was surrounded by such intelligent students and faculty, maybe it was fate. Either way, I
-								eventually left my higher ed job to pursue a career in code. That's where I am today (and that's where I plan to stay)!</p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="mailto:ianmagenta@gmail.com">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="https://twitter.com/ianmagenta" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/ianmagenta" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<a href="https://ianmagenta.github.io"></a>
 							</article>
 
 						<!-- Elements -->
