Updated Contact Form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<img src="images/ian1.svg" alt="Hey, look! It's Ian!">
+				<img style="max-width: 100%; max-height: 100%;" src="images/ian2.png" alt="Hey, look! It's Ian!">
 			</div>
 			<div class="content">
 				<div class="inner">
@@ -117,19 +117,19 @@
 			<article id="contact">
 				<h2 class="major">Contact</h2>
 				<form method="post" action="https://formspree.io/xjvawkdl">
-					<input type="hidden" name="_next" value="https://ianmagenta.github.io/#confirmation" />
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
+							<input required type="text" name="name" id="name" />
+							<input type="hidden" name="_next" value="https://ianmagenta.github.io/#confirmation" />
 						</div>
 						<div class="field half">
 							<label for="email">Email</label>
-							<input type="email" name="email" id="email" />
+							<input required type="email" name="email" id="email" />
 						</div>
 						<div class="field">
 							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="4"></textarea>
+							<textarea required name="message" id="message" rows="4"></textarea>
 						</div>
 					</div>
 					<ul class="actions">
