Added Aditional Icons

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 					<li><a href="https://docs.google.com/document/d/1cgQhr441DvcTbSBkq_uM7yJMPainH-jQ2K5cG2XyWec/edit?usp=sharing"
 							class="icon brands"><i class="fas fa-file"></i><span class="label">Resume</span></a>
 					</li>
+					<li><a href="https://goo.gl/maps/wAvhrHWmQ3FQqW3c9" class="icon brands"><i
+								class="fas fa-map-marker-alt"></i><span class="label">Location</span></a>
+					</li>
 				</ul>
 			</article>
 
