--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<nav>
 				<ul>
 					<li><a href="#intro">Intro</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#skills">Skills</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
@@ -58,8 +58,8 @@
 					ever want to talk shop!</p>
 			</article>
 
-			<!-- Work -->
-			<article id="work">
+			<!-- Projects -->
+			<article id="projects">
 				<h2 class="major">Project 1</h2>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
@@ -87,32 +87,41 @@
 					aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 			</article>
 
-			<!-- About -->
-			<article id="about">
-				<h2 class="major">About</h2>
-				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-				<p>Believe it or not, I actually got my start in politics! I graduated with a BA in Political Theory and
-					Constitutional
-					Democracy (PTCD) as well as Social Relations and Policy (SRP) back in 2014. From there, I worked at
-					a number of
-					government-related jobs and internships across the country. I eventually landed in Washington, DC
-					where I ended up
-					working for a number of education-based non-profits. Over my years there, my passion for education
-					grew and I ended up
-					moving to Chicago, IL to pursue a career in higher ed. It was there that my love for programming
-					started (and grew).
-					Maybe it was because I was surrounded by such intelligent students and faculty, maybe it was fate.
-					Either way, I
-					eventually left my higher ed job to pursue a career in code. That's where I am today (and that's
-					where I plan to stay)!</p>
+			<!-- Skills -->
+			<article id="skills">
+				<h2 class="major">Skills</h2>
+				<ul class="icons" style="text-align: center;">
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+							href="https://www.python.org/" class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+							href="https://www.javascript.com/" class="icon brands fab fa-js fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+							href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
+							class="icon brands fab fa-html5 fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+							href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+							class="icon brands fab fa-css3-alt fa-3x"></a>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://nodejs.org/en/"
+							class="icon brands fab fa-node-js fa-3x"></a>
+					</li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+							href="https://www.python.org/" class="icon brands fab fa-python fa-3x"></a></li>
+				</ul>
 			</article>
 
 			<!-- Form Confirmation -->
 			<article id="confirmation">
 				<h2 class="major">Confirmation</h2>
-				<p>Your message sent sucessfully! I will do my best to get back to you as soon as possible!</p>
+				<p>Your message sent successfully! I will do my best to get back to you as soon as possible!</p>
 			</article>
 
+			<!-- Form Failure -->
 			<article id="failure">
 				<h2 class="major">Error!</h2>
 				<p>Looks like <a href="https://formspree.io/">Formspree</a> was unable to send your message. Please try
