--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 					out my <a href="https://github.com/ianmagenta">Github</a> page!</p>
 				<p>I also do game development on the side! Feel free to <a href="#contact">give me a shout</a> if you
 					ever want to talk shop!</p>
+				<p style="display: inline;">If you're not into games, feel free to check out the <a href="#skills">other
+						technologies</a> I've
+					worked with. I'm sure
+					we'll find something to talk about!</p>
 			</article>
 
 			<!-- Projects -->
@@ -90,7 +94,7 @@
 			<!-- Skills -->
 			<article id="skills">
 				<h2 class="major">Skills</h2>
-				<ul class="icons" style="text-align: center;">
+				<ul class="icons" style="text-align: center; padding-left: 0%;">
 					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
 							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
 							href="https://www.python.org/" class="icon brands fab fa-python fa-3x"></a></li>
@@ -107,18 +111,47 @@
 							class="icon brands fab fa-css3-alt fa-3x"></a>
 					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
 							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://nodejs.org/en/"
-							class="icon brands fab fa-node-js fa-3x"></a>
+							class="icon brands fab fa-node fa-3x"></a>
 					</li>
 					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://expressjs.com/"
+							class="icon fas fa-server fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://reactjs.org/"
+							class="icon brands fab fa-react fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem; color: transparent; background-image: url('https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112'); background-repeat: no-repeat; background-position: center;"
+							href="https://redux.js.org/" class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem; color: transparent; background-image: url('https://api.iconify.design/cib:flask.svg?color=%23ffffff&width=64&height=112'); background-repeat: no-repeat; background-position: center;"
+							href="https://flask.palletsprojects.com/en/1.1.x/"
+							class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem; color: transparent; background-image: url('https://api.iconify.design/cib:postgresql.svg?color=%23ffffff&width=64&height=112'); background-repeat: no-repeat; background-position: center;"
+							href="https://www.postgresql.org/" class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
 							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
-							href="https://www.python.org/" class="icon brands fab fa-python fa-3x"></a></li>
+							href="https://www.docker.com/" class="icon brands fab fa-docker fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://git-scm.com/"
+							class="icon brands fab fa-git-alt fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem; color: transparent; background-image: url('https://api.iconify.design/cib:heroku.svg?color=%23ffffff&width=64&height=112'); background-repeat: no-repeat; background-position: center;"
+							href="https://www.heroku.com/home" class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem; color: transparent; background-image: url('https://api.iconify.design/cib:godot-engine.svg?color=%23ffffff&width=64&height=112'); background-repeat: no-repeat; background-position: center;"
+							href="https://godotengine.org/" class="icon brands fab fa-python fa-3x"></a></li>
+					<li style="padding: 0.35rem 0.75em 0.35em 0;"><a
+							style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;" href="https://unity.com/"
+							class="icon brands fab fa-unity fa-3x"></a></li>
 				</ul>
 			</article>
 
 			<!-- Form Confirmation -->
 			<article id="confirmation">
 				<h2 class="major">Confirmation</h2>
-				<p>Your message sent successfully! I will do my best to get back to you as soon as possible!</p>
+				<p>Message received!</p>
+				<p>I will do my best to get back to you as soon as possible!</p>
 			</article>
 
 			<!-- Form Failure -->
@@ -437,6 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/form.js"></script>
+	<script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
 </body>
 
