Updated Intro section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+				<span class="image main"><img src="images/pic01-ian.png" alt="" /></span>
 				<p>Hi there! I'm Ian. I'm a Full Stack Web Developer and the designer of your future
 					website. It's too late, you've already made up your mind. Now that you've chosen me, I would suggest
 					taking some time to check out my <a href="#work">previous work</a>.</p>
@@ -58,8 +58,7 @@
 					ever want to talk shop!</p>
 				<p style="display: inline;">If you're not into games, feel free to check out the <a href="#skills">other
 						technologies</a> I've
-					worked with. I'm sure
-					we'll find something to talk about!</p>
+					worked with. Let me know if you see anything you like!</p>
 			</article>
 
 			<!-- Projects -->
