--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<span class="image main"><img src="images/pic01-ian.png" alt="" /></span>
 				<p>Hi there! I'm Ian. I'm a Full Stack Web Developer and the designer of your future
 					website. It's too late, you've already made up your mind. Now that you've chosen me, I would suggest
-					taking some time to check out my <a href="#work">previous work</a>.</p>
+					taking some time to check out my <a href="#projects">previous work</a>.</p>
 				<p>I'm so glad you love it! (I do too). If you're interested in seeing more of my work, why not check
 					out my <a href="https://github.com/ianmagenta">Github</a> page!</p>
 				<p>I also do game development on the side! Feel free to <a href="#contact">give me a shout</a> if you
