Started Projects Page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<span class="image main"><img src="images/pic01-ian.png" alt="" /></span>
+				<span class="image main"><img src="images/pic01-ian.png" alt="Which Ian is your favorite Ian?" /></span>
 				<p>Hi there! I'm Ian. I'm a Full Stack Web Developer and the designer of your future
 					website. It's too late, you've already made up your mind. Now that you've chosen me, I would suggest
 					taking some time to check out my <a href="#projects">previous work</a>.</p>
@@ -63,18 +63,25 @@
 
 			<!-- Projects -->
 			<article id="projects">
-				<h2 class="major">Project 1</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-					Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer
-					sollicitudin mauris nec lorem luctus ultrices.</p>
-				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna
-					sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas
-					laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat
-					tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-					tempus.</p>
+				<h2 class="major">SteamMarket</h2>
+				<h2 class="major">Analyzer</h2>
+				<span class="image main"><img src="images/pic02-steammaket.png" alt="" /></span>
+				<div style="display: flex; justify-content: space-around; margin-bottom: 2rem;"><a class="button small"
+						href="https://github.com/ianmagenta/SteamMarket-Analyzer">GitHub</a>
+					<a class="button small" href="https://steammarket-analyzer.herokuapp.com/snapshot">Live Site</a>
+				</div>
+				<p>The SteamMarket Analyzer (SMA)
+					is designed to give developers greater access to data from Steam, the #1 online marketplace for PC
+					games. Specifically,
+					SMA is designed to help developers who are struggling to find success on Steam's overcrowded
+					storefront by giving them
+					all the data they need to make a stand-out game. SMA achieves this by leveraging Steam Spy's API and
+					Steam's undocumented storefront API to display live stats about what
+					games are succeeding (and could succeed) on the Steam marketplace.</p>
+				<p>This project was made using React, JSX, Material-UI, ApexCharts, the Steam Spy API, and good old JS /
+					HTML / CSS.</p>
 
-				<h2 class="major">Project 2</h2>
+				<!-- <h2 class="major">Project 2</h2>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
 					Aliquam erat
@@ -87,7 +94,7 @@
 					lacinia
 					pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
 					libero. Mauris
-					aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+					aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p> -->
 			</article>
 
 			<!-- Skills -->
