--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             Hi there! I'm Ian. I'm a Full Stack Web Developer and the designer of your future website. It's too late,
             you've already made up your mind. Now that you've chosen me, I would suggest taking some time to check out
             my <a href="#projects">previous work</a>. I'm so glad you love it! (I do too). If you're interested in
-            seeing more of my work, why not check out my <a href="https://github.com/ianmagenta">Github</a> page!
+            seeing more of my work, why not check out my
+            <a target="_blank" href="https://github.com/ianmagenta">Github</a> page!
           </p>
           <p>
             I also do game development on the side! Feel free to <a href="#contact">give me a shout</a> if you ever want
@@ -62,8 +63,8 @@
           <h2 class="major">Custom Crafts</h2>
           <span class="image main"><img src="images/spaceship.png" alt="" /></span>
           <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
-            <a class="button small" href="https://github.com/ZacharyRizer/Custom-Crafts">GitHub</a>
-            <a class="button small" href="https://customcrafts.herokuapp.com/">Live Site</a>
+            <a target="_blank" class="button small" href="https://github.com/ZacharyRizer/Custom-Crafts">GitHub</a>
+            <a target="_blank" class="button small" href="https://customcrafts.herokuapp.com/">Live Site</a>
           </div>
           <p>
             Custom crafts is an ecommerce site focused on selling SciFi spaceships (at affordable prices). The site
@@ -78,8 +79,8 @@
           <h2 class="major">Game Dev Toolbox</h2>
           <span class="image main"><img src="images/dots.png" alt="" /></span>
           <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
-            <a class="button small" href="https://github.com/ianmagenta/SteamMarket-Analyzer">GitHub</a>
-            <a class="button small" href="https://steammarket-analyzer.herokuapp.com/snapshot">Live Site</a>
+            <a target="_blank" class="button small" href="https://github.com/ianmagenta/Game-Dev-Toolbox">GitHub</a>
+            <a target="_blank" class="button small" href="https://game-dev-toolbox.herokuapp.com/">Live Site</a>
           </div>
           <p>
             Game Dev Toolbox is a catalogue of game development tools including engines, frameworks, libraries, art
@@ -96,8 +97,10 @@
           <h2 class="major">SteamMarket Analyzer</h2>
           <span class="image main"><img src="images/pic02-steammaket.png" alt="" /></span>
           <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
-            <a class="button small" href="https://github.com/ianmagenta/SteamMarket-Analyzer">GitHub</a>
-            <a class="button small" href="https://steammarket-analyzer.herokuapp.com/snapshot">Live Site</a>
+            <a target="_blank" class="button small" href="https://github.com/ianmagenta/SteamMarket-Analyzer">GitHub</a>
+            <a target="_blank" class="button small" href="https://steammarket-analyzer.herokuapp.com/snapshot"
+              >Live Site</a
+            >
           </div>
           <p>
             The SteamMarket Analyzer (SMA) is designed to give developers greater access to data from Steam, the #1
@@ -132,6 +135,7 @@
           <ul class="icons" style="text-align: center; padding-left: 0%;">
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://www.python.org/"
                 class="icon brands fab fa-python fa-3x"
@@ -139,6 +143,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://www.javascript.com/"
                 class="icon brands fab fa-js fa-3x"
@@ -146,6 +151,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
                 class="icon brands fab fa-html5 fa-3x"
@@ -153,6 +159,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://developer.mozilla.org/en-US/docs/Web/CSS"
                 class="icon brands fab fa-css3-alt fa-3x"
@@ -161,6 +168,7 @@
 
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://nodejs.org/en/"
                 class="icon brands fab fa-node fa-3x"
@@ -168,6 +176,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://expressjs.com/"
                 class="icon fas fa-server fa-3x"
@@ -175,6 +184,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://reactjs.org/"
                 class="icon brands fab fa-react fa-3x"
@@ -182,6 +192,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="
                   height: 5.25rem;
                   width: 5.25rem;
@@ -197,6 +208,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="
                   height: 5.25rem;
                   width: 5.25rem;
@@ -212,6 +224,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="
                   height: 5.25rem;
                   width: 5.25rem;
@@ -227,6 +240,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://www.docker.com/"
                 class="icon brands fab fa-docker fa-3x"
@@ -234,6 +248,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://git-scm.com/"
                 class="icon brands fab fa-git-alt fa-3x"
@@ -241,6 +256,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="
                   height: 5.25rem;
                   width: 5.25rem;
@@ -256,6 +272,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="
                   height: 5.25rem;
                   width: 5.25rem;
@@ -271,6 +288,7 @@
             </li>
             <li style="padding: 0.35rem 0.75em 0.35em 0;">
               <a
+                target="_blank"
                 style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
                 href="https://unity.com/"
                 class="icon brands fab fa-unity fa-3x"
@@ -290,8 +308,8 @@
         <article id="failure">
           <h2 class="major">Error!</h2>
           <p>
-            Looks like <a href="https://formspree.io/">Formspree</a> was unable to send your message. Please try again
-            later!
+            Looks like <a target="_blank" href="https://formspree.io/">Formspree</a> was unable to send your message.
+            Please try again later!
           </p>
         </article>
 
@@ -320,34 +338,35 @@
           </form>
           <ul class="icons">
             <li>
-              <a href="https://github.com/ianmagenta" class="icon brands fa-github"
+              <a target="_blank" href="https://github.com/ianmagenta" class="icon brands fa-github"
                 ><span class="label">GitHub</span></a
               >
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/ianmagenta/" class="icon brands fa-linkedin"
+              <a target="_blank" href="https://www.linkedin.com/in/ianmagenta/" class="icon brands fa-linkedin"
                 ><span class="label">LinkedIn</span></a
               >
             </li>
             <li>
-              <a href="https://angel.co/u/ian-magenta-1" class="icon brands fa-angellist"
+              <a target="_blank" href="https://angel.co/u/ian-magenta-1" class="icon brands fa-angellist"
                 ><span class="label">AngelList</span></a
               >
             </li>
             <li>
-              <a href="https://twitter.com/ianmagenta" class="icon brands fa-twitter"
+              <a target="_blank" href="https://twitter.com/ianmagenta" class="icon brands fa-twitter"
                 ><span class="label">Twitter</span></a
               >
             </li>
             <li>
               <a
+                target="_blank"
                 href="https://docs.google.com/document/d/1cgQhr441DvcTbSBkq_uM7yJMPainH-jQ2K5cG2XyWec/edit?usp=sharing"
                 class="icon brands"
                 ><i class="fas fa-file"></i><span class="label">Resume</span></a
               >
             </li>
             <li>
-              <a href="https://goo.gl/maps/wAvhrHWmQ3FQqW3c9" class="icon brands"
+              <a target="_blank" href="https://goo.gl/maps/wAvhrHWmQ3FQqW3c9" class="icon brands"
                 ><i class="fas fa-map-marker-alt"></i><span class="label">Location</span></a
               >
             </li>
